Fixed and schema updates
